--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "crypto_api_osrandom"
 edition = "2018"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["Keziah Biermann <development@kizzycode.de>"]
 description = "An interface to the OS' secure random number generator for `crypto_api`"
 keywords = ["Crypto", "Random", "CSPRNG", "PRNG", "RNG"]
@@ -10,11 +10,11 @@ repository = "https://github.com/KizzyCode/crypto_api_osrandom"
 readme = "README.md"
 
 [badges]
-travis-ci = { repository = "https://github.com/KizzyCode/crypto_api_osrandom", branch = "master" }
-appveyor = { repository = "https://github.com/KizzyCode/crypto_api_osrandom", branch = "master" }
-maintenance = { statue = "actively-developed" }
-is-it-maintained-open-issues = { repository = "https://github.com/KizzyCode/crypto_api_osrandom" }
-is-it-maintained-issue-resolution = { repository = "https://github.com/KizzyCode/crypto_api_osrandom" }
+travis-ci = { repository = "KizzyCode/crypto_api_osrandom" }
+appveyor = { repository = "KizzyCode/crypto_api_osrandom" }
+maintenance = { status = "passively-maintained" }
+is-it-maintained-open-issues = { repository = "KizzyCode/crypto_api_osrandom" }
+is-it-maintained-issue-resolution = { repository = "KizzyCode/crypto_api_osrandom" }
 
 
 [dependencies]
