--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "crypto_api_osrandom"
-edition = "2018"
-version = "0.1.6"
+edition = "2021"
+version = "0.2.0"
 authors = ["Keziah Biermann <development@kizzycode.de>"]
 description = "An interface to the OS' secure random number generator for `crypto_api`"
 keywords = ["Crypto", "Random", "CSPRNG", "PRNG", "RNG"]
@@ -16,8 +16,12 @@ is-it-maintained-open-issues = { repository = "KizzyCode/crypto_api_osrandom" }
 is-it-maintained-issue-resolution = { repository = "KizzyCode/crypto_api_osrandom" }
 
 
+[features]
+default = []
+
+
 [dependencies]
-crypto_api = "0.2.2"
+crypto_api = { version = "0.2.2", optional = true }
 
 [build-dependencies]
 cc = "1.0"
